# rkyv-utils

./: .gitignore  .justfile  Cargo.toml  release-plz.toml  renovate.json
.github/workflows/: ci.yml  relesae-plz.yml
crates/aligned-buffer/: CHANGELOG.md  Cargo.toml
crates/aligned-buffer-pool/: CHANGELOG.md  Cargo.toml
crates/aligned-buffer-pool/src/: buffer_pool.rs  lib.rs  pool.rs  serializer_pool.rs  validator_pool.rs
crates/aligned-buffer-pool/src/validator_pool/: shared.rs
crates/aligned-buffer/src/: alloc.rs  bytes.rs  cap.rs  lib.rs  raw.rs  rkyv.rs  shared.rs  unique.rs
crates/aligned-buffer/src/raw/: cap.rs  layout.rs
crates/rkyv-owned-archive/: CHANGELOG.md  Cargo.toml
crates/rkyv-owned-archive/src/: lib.rs  pool.rs
