[workspace]
resolver = "2"
members = [
	"crates/aligned-buffer",
	"crates/aligned-buffer-pool",
	"crates/rkyv-owned-archive",
]

[workspace.dependencies]
bytes = { version = "1", default-features = false }
const_panic = { version = "0.2.8", default-features = false }
crossbeam-queue = "0.3.11"
crossbeam-utils = "0.8.19"
fxhash = { version = "0.2.1", default-features = false }
rkyv = { version = "0.8.0-alpha.2", default-features = false }
stable_deref_trait = { version = "1.2.0", default-features = false }
static_assertions = "1"
thiserror = "1"
