[package]
name = "aligned-buffer-pool"
version = "0.1.0"
edition = "2021"
description = "A buffer-pool with controllable alignment."
license = "MIT"
authors = ["Aleksander Heintz <alxandr@alxandr.me>"]
repository = "https://github.com/YoloDev/rkyv-utils"
keywords = ["buffer", "rkyv", "bytes"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aligned-buffer = { version = "0.1.0", path = "../aligned-buffer", default-features = false }
crossbeam-queue = { workspace = true }
fxhash = { workspace = true }
rkyv = { workspace = true, features = ["std"], optional = true }

[features]
default = ["bytecheck"]
rkyv = ["dep:rkyv", "aligned-buffer/rkyv"]
bytecheck = ["rkyv?/bytecheck", "aligned-buffer/bytecheck"]
