[package]
name = "aligned-buffer"
version = "0.0.3"
edition = "2021"
description = "A buffer with controllable alignment, that can be sealed and shared by reference count."
license = "MIT"
authors = ["Aleksander Heintz <alxandr@alxandr.me>"]
repository = "https://github.com/YoloDev/rkyv-utils"
keywords = ["buffer", "rkyv", "bytes"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1", default-features = false, optional = true, features = ["std"] }
const_panic = { version = "0.2", default-features = false }
rkyv = { version = "0.8.0-pre1", default-features = false, features = ["std", "bytecheck"], optional = true, git = "https://github.com/rkyv/rkyv", rev = "be38ebe926bf8bb4898af472ba7ce90f72df74bd" }
stable_deref_trait = { version = "1", default-features = false, optional = true }
static_assertions = "1"
thiserror = "1"

[features]
default = ["stable-deref-trait"]
stable-deref-trait = ["dep:stable_deref_trait"]
bytes = ["dep:bytes"]
rkyv = ["dep:rkyv"]
