[package]
name = "aligned-buffer"
version = "0.2.0"
edition = "2021"
description = "A buffer with controllable alignment, that can be sealed and shared by reference count."
license = "MIT"
authors = ["Aleksander Heintz <alxandr@alxandr.me>"]
repository = "https://github.com/YoloDev/rkyv-utils"
keywords = ["buffer", "rkyv", "bytes"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { workspace = true, features = ["std"], optional = true }
const_panic = { workspace = true }
crossbeam-utils = { workspace = true }
rkyv = { workspace = true, features = ["std"], optional = true }
stable_deref_trait = { workspace = true, optional = true }
static_assertions = { workspace = true }
thiserror = { workspace = true }

[features]
default = ["stable-deref-trait", "bytecheck"]
stable-deref-trait = ["dep:stable_deref_trait"]
bytes = ["dep:bytes"]
rkyv = ["dep:rkyv"]
bytecheck = ["rkyv?/bytecheck"]
