[package]
name = "rkyv-owned-archive"
version = "0.0.2"
edition = "2021"
description = "Helpers for having owned Archived types in rkyv."
license = "MIT"
authors = ["Aleksander Heintz <alxandr@alxandr.me>"]
repository = "https://github.com/YoloDev/rkyv-utils"
keywords = ["buffer", "rkyv", "bytes"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aligned-buffer = { version = "0.0.6", path = "../aligned-buffer", default-features = false }
rkyv = { version = "0.8.0-alpha.2", default-features = false }

[dev-dependencies]
aligned-buffer-pool = { version = "0.0.2", path = "../aligned-buffer-pool", default-features = false }

[features]
default = ["bytecheck"]
bytecheck = ["rkyv/bytecheck"]
