[package]
name = "rkyv-owned-archive"
version = "0.0.6"
edition = "2021"
description = "Helpers for having owned Archived types in rkyv."
license = "MIT"
authors = ["Aleksander Heintz <alxandr@alxandr.me>"]
repository = "https://github.com/YoloDev/rkyv-utils"
keywords = ["buffer", "rkyv", "bytes"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aligned-buffer = { version = "0.0.8", path = "../aligned-buffer", default-features = false }
aligned-buffer-pool = { version = "0.0.5", path = "../aligned-buffer-pool", default-features = false, optional = true }
rkyv = { workspace = true }


[dev-dependencies]
aligned-buffer-pool = { version = "0.0.5", path = "../aligned-buffer-pool", default-features = false }

[features]
default = ["bytecheck"]
bytecheck = ["rkyv/bytecheck"]
pool = ["dep:aligned-buffer-pool"]
