[package]
name = "rkyv-owned-archive"
version = "0.1.0"
edition = "2021"
description = "Helpers for having owned Archived types in rkyv."
license = "MIT"
authors = ["Aleksander Heintz <alxandr@alxandr.me>"]
repository = "https://github.com/YoloDev/rkyv-utils"
keywords = ["buffer", "rkyv", "bytes"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aligned-buffer = { version = "0.1.0", path = "../aligned-buffer", default-features = false, features = ["rkyv"] }
aligned-buffer-pool = { version = "0.1.0", path = "../aligned-buffer-pool", default-features = false, optional = true, features = ["rkyv"] }
rkyv = { workspace = true, features = ["std"] }

[dev-dependencies]
aligned-buffer-pool = { version = "0.1.0", path = "../aligned-buffer-pool", default-features = false, features = ["rkyv"] }

[features]
default = ["bytecheck"]
bytecheck = ["rkyv/bytecheck", "aligned-buffer/bytecheck", "aligned-buffer-pool/bytecheck"]
pool = ["dep:aligned-buffer-pool"]
